# telepat-pill-dispenser

./: .ccls  .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  extra_scripts.py  flash-with-serial-nu.sh  nvs_partition_gen.sh  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults
.github/workflows/: ci.yml
components/battery_controller/: CMakeLists.txt  battery_controller.c
components/battery_controller/include/: battery_controller.h
components/button_controller/: CMakeLists.txt  button_controller.c  idf_component.yml
components/button_controller/include/: button_controller.h
components/buzzer/: CMakeLists.txt  buzzer.c  buzzer_player.c
components/buzzer/include/: buzzer.h  buzzer_player_private.h
components/captive_portal/: CMakeLists.txt  README.md  captive_portal.c
components/captive_portal/include/: captive_portal.h
components/cell_display_controller/: CMakeLists.txt  Kconfig.projbuild  cell_activity_watchdog.c  cell_activity_ws2812b.c  cell_display_controller.c  cell_led_controller.c  cell_led_matrix_controller.c  cell_led_plain_pins_controller.c  idf_component.yml
components/cell_display_controller/include/: cell_activity_watchdog.h  cell_display_controller.h  cell_led_controller.h
components/cleaner/: CMakeLists.txt  cleaner.c
components/cleaner/include/: cleaner.h
components/display_error/: CMakeLists.txt  Kconfig.projbuild  display_error.c  idf_component.yml  led_controller.c  sleep_controller.c
components/display_error/include/: display_error.h  (+2 more)
components/global_manager/: CMakeLists.txt  init_global_manager.c  medsenger_refresh_rate.c  medsenger_synced.c  mfg_data.c  stop_all_tasks.c  wifi_creds.c
components/ht16k33/: idf_component.yml
components/medsenger_http_requests/: CMakeLists.txt  Kconfig.projbuild  fetch_schedule_request.c  medsenger_http_requests.c  submit_success_request.c
components/pilld_common/: CMakeLists.txt  common.c  pilld_common.c
components/pilld_models/: CMakeLists.txt  Kconfig.projbuild  last_confirmed_cell.c  medsenger_refresh_rate.c  schedule_data.c  send_event_data.c
components/schedule_data/: CMakeLists.txt  Kconfig.projbuild  schedule_data.c
components/wifi_manager/: CMakeLists.txt  Kconfig.projbuild  connect.c  time_sync.c  wifi_manager.c
components/ws2812b_controller/: CMakeLists.txt  ws2812b_controller.c
docs/: logic.puml
docs/build-guideline/: build-ru.puml  build.puml  hw-testing-ru.puml  hw-testing.puml
main/: CMakeLists.txt  Kconfig.projbuild  button.c  button.h  cells.c  cells.h  http-request.c  http-request.h  http_request.c  http_request.h  idf_component.yml  protocols-common.c  protocols-common.h  schedule-request.c  schedule-request.h  schedule-storage.c  schedule-storage.h  scheduler.c  scheduler.h  submit-request.c  submit-request.h  tcp_socker.c  telepat-pill-dispenser.c  wifi.c  wifi_connection.c  wifi_connection.h
src/: main.c
(+23 files in other folders)
